# server.js
@@ -17,10 +17,11 @@ app.get('/', (req, res) => {
 });
 // Require register routes
 const registerRoutes = require('./src/routes/register.routes')
+const loginRoutes = require('./src/routes/login.routes')
 // using as middleware
 app.use('/register', registerRoutes)
+app.use('/login', loginRoutes)
 // listen for requests
-
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 
