# src/routes/login.routes.js
@@ -1,0 +1,8 @@
+const express = require('express')
+const router = express.Router()
+const loginController = require('../controllers/login.controller');
+
+// Login a register with username and password
+router.post('/', loginController.login);
+
+module.exports = router
