# src/routes/register.routes.js
@@ -1,14 +1,15 @@
 const express = require('express')
 const router = express.Router()
 const registerController = require('../controllers/register.controller');
-// Retrieve all employees
+// Retrieve all register
 router.get('/', registerController.findAll);
-// Create a new employee
+// Create a new register
 router.post('/', registerController.create);
-// Retrieve a single employee with id
+// Retrieve a single register with id
 router.get('/:id', registerController.findById);
-// Update a employee with id
+// Update a register with id
 router.put('/:id', registerController.update);
-// Delete a employee with id
+// Delete a register with id
 router.delete('/:id', registerController.delete);
+
 module.exports = router
